--- a/Servicios/mantenimiento-redes.html
+++ b/Servicios/mantenimiento-redes.html
@@ -75,13 +75,17 @@
 
     <header class="site-header">
         <div class="container header-content">
+            <!-- Logo SATEKOR -->
             <a href="/" class="logo">
-                <img src="../Assets/Imagenes/logoB.png" alt="Logo SATEKOR Telecomunicaciones Almería">
+                <img src="Assets/Imagenes/logoB.png" alt="Logo SATEKOR Telecomunicaciones Almería">
             </a>
+            <!-- Botón Hamburguesa -->
             <button id="menu-toggle" class="menu-toggle" aria-label="Abrir menú" aria-expanded="false" aria-controls="main-nav">
                 <span class="hamburger"></span>
             </button>
-            <nav id="main-nav" class="main-nav" aria-label="Navegación principal">
+
+             <!-- === Navegación Principal con Desplegable === -->
+             <nav id="main-nav" class="main-nav" aria-label="Navegación principal">
                 <ul>
                     <!-- Enlace a Inicio (index.html en la raíz) -->
                     <li><a href="index.html">Inicio</a></li> <!-- O puedes usar "." si esta nav SÓLO está en index.html -->
@@ -103,6 +107,17 @@
                             <li><a href="Servicios/internet-rural.html">Internet Rural Empresas</a></li>
                         </ul>
                     </li>
+                    <!-- Fin Elemento de Menú Desplegable -->
+            
+                    <!-- Si las secciones #clientes y #faq están en tu index.html principal -->
+                    <li><a href="index.html#clientes">Clientes</a></li>
+                    <li><a href="index.html#faq">FAQ</a></li>
+                    <li><a href="Blog/">Blog</a></li> <!-- Funciona si 'Blog' es una carpeta en la raíz -->
+                    <li><a href="contacto.html" class="nav-cta-button">Contacto</a></li> <!-- Funciona si 'contacto.html' está en la raíz -->
+                </ul>
+            </nav>
+            <!-- === FIN Navegación Principal === -->
+
         </div>
     </header>
 
@@ -131,7 +146,7 @@
                 <div class="hero-text-content">
                     <h1>Soporte y Mantenimiento de Telecomunicaciones 24/7 en Almería</h1>
                     <p class="subtitle">Garantice la continuidad operativa de su empresa con el servicio de mantenimiento preventivo, correctivo y soporte técnico urgente de SATEKOR para todas sus infraestructuras de red en Almería.</p>
-                    <a href="/contacto.html?servicio=mantenimiento" class="btn btn-primary">Solicitar Contrato de Mantenimiento</a>
+                    <a href="contacto.html?servicio=mantenimiento" class="btn btn-primary">Solicitar Contrato de Mantenimiento</a>
                 </div>
             </div>
         </section>
@@ -340,7 +355,7 @@
             <div class="container">
                 <h2 class="section-title" style="color: var(--color-primary);">Mantenga sus Comunicaciones Siempre Operativas en Almería</h2>
                 <p class="subtitle" style="color: var(--color-text-primary);">No espere a tener un problema. Contacte con SATEKOR para un plan de mantenimiento adaptado a su empresa y asegure su tranquilidad.</p>
-                <a href="/contacto.html?servicio=mantenimiento" class="btn btn-primary btn-large">Contactar para Mantenimiento</a>
+                <a href="contacto.html?servicio=mantenimiento" class="btn btn-primary btn-large">Contactar para Mantenimiento</a>
                 <p><a href="tel:+34642531300">O llámenos al <strong>642 53 13 00</strong></a></p>
             </div>
         </section>
@@ -351,21 +366,21 @@
                 <div class="service-grid">
                      <article class="service-card related-card">
                         <i class="fas fa-network-wired service-icon" aria-hidden="true"></i>
-                        <h3><a href="/Servicios/infraestructura-telecom.html">Infraestructura Crítica</a></h3>
+                        <h3><a href="Servicios/infraestructura-telecom.html">Infraestructura Crítica</a></h3>
                         <p>Una infraestructura robusta es la base, y nuestro mantenimiento la preserva.</p>
-                        <a href="/Servicios/infraestructura-telecom.html" class="btn btn-small btn-secondary">Ver Infraestructura</a>
+                        <a href="Servicios/infraestructura-telecom.html" class="btn btn-small btn-secondary">Ver Infraestructura</a>
                     </article>
                     <article class="service-card related-card">
                         <i class="fas fa-wifi service-icon" aria-hidden="true"></i>
-                        <h3><a href="/Servicios/fibra-optica-empresas.html">Fibra Óptica Empresas</a></h3>
+                        <h3><a href="Servicios/fibra-optica-empresas.html">Fibra Óptica Empresas</a></h3>
                         <p>Aseguramos el óptimo rendimiento de su conexión de fibra óptica con nuestro soporte.</p>
-                        <a href="/Servicios/fibra-optica-empresas.html" class="btn btn-small btn-secondary">Ver Fibra Óptica</a>
+                        <a href="Servicios/fibra-optica-empresas.html" class="btn btn-small btn-secondary">Ver Fibra Óptica</a>
                     </article>
                     <article class="service-card related-card">
                         <i class="fas fa-video service-icon" aria-hidden="true"></i>
-                        <h3><a href="/Servicios/videovigilancia-empresas.html">Videovigilancia Empresas</a></h3>
+                        <h3><a href="Servicios/videovigilancia-empresas.html">Videovigilancia Empresas</a></h3>
                         <p>Mantenga sus sistemas de seguridad siempre activos y funcionales con nuestro servicio.</p>
-                        <a href="/Servicios/videovigilancia-empresas.html" class="btn btn-small btn-secondary">Ver Videovigilancia</a>
+                        <a href="Servicios/videovigilancia-empresas.html" class="btn btn-small btn-secondary">Ver Videovigilancia</a>
                     </article>
                 </div>
             </div>
@@ -381,9 +396,9 @@
          <div class="container footer-content">
             <p>© <span id="current-year"></span> SATEKOR Telecomunicaciones. Todos los derechos reservados.</p>
             <nav class="footer-nav" aria-label="Navegación secundaria">
-                <a href="/politica-privacidad.html">Política de Privacidad</a> |
-                <a href="/terminos-uso.html">Términos de Uso</a> |
-                <a href="/politica-cookies.html">Política de Cookies</a>
+                <a href="politica-privacidad.html">Política de Privacidad</a> |
+                <a href="terminos-uso.html">Términos de Uso</a> |
+                <a href="politica-cookies.html">Política de Cookies</a>
             </nav>
         </div>
     </footer>
