--- a/Servicios/soluciones-iot.html
+++ b/Servicios/soluciones-iot.html
@@ -76,13 +76,17 @@
 
     <header class="site-header">
         <div class="container header-content">
+            <!-- Logo SATEKOR -->
             <a href="/" class="logo">
-                <img src="../Assets/Imagenes/logoB.png" alt="Logo SATEKOR Telecomunicaciones Almería">
+                <img src="Assets/Imagenes/logoB.png" alt="Logo SATEKOR Telecomunicaciones Almería">
             </a>
+            <!-- Botón Hamburguesa -->
             <button id="menu-toggle" class="menu-toggle" aria-label="Abrir menú" aria-expanded="false" aria-controls="main-nav">
                 <span class="hamburger"></span>
             </button>
-            <nav id="main-nav" class="main-nav" aria-label="Navegación principal">
+
+             <!-- === Navegación Principal con Desplegable === -->
+             <nav id="main-nav" class="main-nav" aria-label="Navegación principal">
                 <ul>
                     <!-- Enlace a Inicio (index.html en la raíz) -->
                     <li><a href="index.html">Inicio</a></li> <!-- O puedes usar "." si esta nav SÓLO está en index.html -->
@@ -104,6 +108,17 @@
                             <li><a href="Servicios/internet-rural.html">Internet Rural Empresas</a></li>
                         </ul>
                     </li>
+                    <!-- Fin Elemento de Menú Desplegable -->
+            
+                    <!-- Si las secciones #clientes y #faq están en tu index.html principal -->
+                    <li><a href="index.html#clientes">Clientes</a></li>
+                    <li><a href="index.html#faq">FAQ</a></li>
+                    <li><a href="Blog/">Blog</a></li> <!-- Funciona si 'Blog' es una carpeta en la raíz -->
+                    <li><a href="contacto.html" class="nav-cta-button">Contacto</a></li> <!-- Funciona si 'contacto.html' está en la raíz -->
+                </ul>
+            </nav>
+            <!-- === FIN Navegación Principal === -->
+
         </div>
     </header>
 
@@ -132,7 +147,7 @@
                 <div class="hero-text-content">
                     <h1>Automatización Inteligente y Soluciones IoT para su Empresa en Almería</h1>
                     <p class="subtitle">Transforme su negocio con la tecnología del Internet de las Cosas. SATEKOR diseña e implementa sistemas IoT a medida para optimizar recursos, mejorar la eficiencia y crear entornos inteligentes en Almería.</p>
-                    <a href="/contacto.html?servicio=iot" class="btn btn-primary">Descubrir Soluciones IoT</a>
+                    <a href="contacto.html?servicio=iot" class="btn btn-primary">Descubrir Soluciones IoT</a>
                 </div>
             </div>
         </section>
@@ -339,7 +354,7 @@
             <div class="container">
                 <h2 class="section-title" style="color: var(--color-primary);">Innove y Optimice su Negocio en Almería con IoT</h2>
                 <p class="subtitle" style="color: var(--color-text-primary);">Descubra el potencial de la automatización inteligente. Contacte con SATEKOR para un asesoramiento personalizado sobre soluciones IoT.</p>
-                <a href="/contacto.html?servicio=iot" class="btn btn-primary btn-large">Consultar Proyecto IoT</a>
+                <a href="contacto.html?servicio=iot" class="btn btn-primary btn-large">Consultar Proyecto IoT</a>
                 <p><a href="tel:+34642531300">O llámenos al <strong>642 53 13 00</strong></a></p>
             </div>
         </section>
@@ -350,21 +365,21 @@
                 <div class="service-grid">
                      <article class="service-card related-card">
                         <i class="fas fa-network-wired service-icon" aria-hidden="true"></i>
-                        <h3><a href="/Servicios/infraestructura-telecom.html">Infraestructura de Red</a></h3>
+                        <h3><a href="Servicios/infraestructura-telecom.html">Infraestructura de Red</a></h3>
                         <p>Una red local robusta es clave para soportar sus gateways y dispositivos IoT conectados.</p>
-                        <a href="/Servicios/infraestructura-telecom.html" class="btn btn-small btn-secondary">Ver Infraestructura</a>
+                        <a href="Servicios/infraestructura-telecom.html" class="btn btn-small btn-secondary">Ver Infraestructura</a>
                     </article>
                     <article class="service-card related-card">
                         <i class="fas fa-wifi service-icon" aria-hidden="true"></i>
-                        <h3><a href="/Servicios/fibra-optica-empresas.html">Fibra Óptica Empresas</a></h3>
+                        <h3><a href="Servicios/fibra-optica-empresas.html">Fibra Óptica Empresas</a></h3>
                         <p>Asegure la conectividad de backhaul para sus gateways IoT con internet de alta velocidad.</p>
-                        <a href="/Servicios/fibra-optica-empresas.html" class="btn btn-small btn-secondary">Ver Fibra Óptica</a>
+                        <a href="Servicios/fibra-optica-empresas.html" class="btn btn-small btn-secondary">Ver Fibra Óptica</a>
                     </article>
                     <article class="service-card related-card">
                         <i class="fas fa-tools service-icon" aria-hidden="true"></i>
-                        <h3><a href="/Servicios/mantenimiento-redes.html">Mantenimiento Integral</a></h3>
+                        <h3><a href="Servicios/mantenimiento-redes.html">Mantenimiento Integral</a></h3>
                         <p>Ofrecemos soporte y mantenimiento para sus redes IoT y la infraestructura subyacente.</p>
-                        <a href="/Servicios/mantenimiento-redes.html" class="btn btn-small btn-secondary">Ver Mantenimiento</a>
+                        <a href="Servicios/mantenimiento-redes.html" class="btn btn-small btn-secondary">Ver Mantenimiento</a>
                     </article>
                 </div>
             </div>
@@ -380,9 +395,9 @@
          <div class="container footer-content">
             <p>© <span id="current-year"></span> SATEKOR Telecomunicaciones. Todos los derechos reservados.</p>
             <nav class="footer-nav" aria-label="Navegación secundaria">
-                <a href="/politica-privacidad.html">Política de Privacidad</a> |
-                <a href="/terminos-uso.html">Términos de Uso</a> |
-                <a href="/politica-cookies.html">Política de Cookies</a>
+                <a href="politica-privacidad.html">Política de Privacidad</a> |
+                <a href="terminos-uso.html">Términos de Uso</a> |
+                <a href="politica-cookies.html">Política de Cookies</a>
             </nav>
         </div>
     </footer>
