--- a/contacto.html
+++ b/contacto.html
@@ -56,7 +56,6 @@
 </head>
 <body>
 
-    <!-- === Encabezado del Sitio === -->
     <header class="site-header">
         <div class="container header-content">
             <!-- Logo SATEKOR -->
@@ -91,6 +90,15 @@
                             <li><a href="Servicios/internet-rural.html">Internet Rural Empresas</a></li>
                         </ul>
                     </li>
+                    <!-- Fin Elemento de Menú Desplegable -->
+            
+                    <!-- Si las secciones #clientes y #faq están en tu index.html principal -->
+                    <li><a href="index.html#clientes">Clientes</a></li>
+                    <li><a href="index.html#faq">FAQ</a></li>
+                    <li><a href="Blog/">Blog</a></li> <!-- Funciona si 'Blog' es una carpeta en la raíz -->
+                    <li><a href="contacto.html" class="nav-cta-button">Contacto</a></li> <!-- Funciona si 'contacto.html' está en la raíz -->
+                </ul>
+            </nav>
             <!-- === FIN Navegación Principal === -->
 
         </div>
@@ -109,10 +117,10 @@
                 <div class="related-services" style="text-align: center; margin-bottom: 2.5rem; font-size: 1.05rem;">
                     <p style="margin-bottom: 0.8rem; color: var(--color-text-primary); font-weight: 500;">Podemos ayudarte con:</p>
                     <ul style="list-style: none; padding: 0; display: flex; flex-wrap: wrap; justify-content: center; gap: 0.5rem 1.5rem;">
-                      <li><i class="fas fa-wrench fa-fw" style="color: var(--color-primary);"></i> <a href="/Servicios/mantenimiento-redes.html" style="color: var(--color-text-secondary); text-decoration: none;">Reparación urgente de redes</a></li>
-                      <li><i class="fas fa-wifi fa-fw" style="color: var(--color-primary);"></i> <a href="/Servicios/fibra-optica-empresas.html" style="color: var(--color-text-secondary); text-decoration: none;">Fibra óptica empresarial</a></li>
+                      <li><i class="fas fa-wrench fa-fw" style="color: var(--color-primary);"></i> <a href="Servicios/mantenimiento-redes.html" style="color: var(--color-text-secondary); text-decoration: none;">Reparación urgente de redes</a></li>
+                      <li><i class="fas fa-wifi fa-fw" style="color: var(--color-primary);"></i> <a href="Servicios/fibra-optica-empresas.html" style="color: var(--color-text-secondary); text-decoration: none;">Fibra óptica empresarial</a></li>
                       <li><i class="fas fa-satellite-dish fa-fw" style="color: var(--color-primary);"></i> <a href="/Servicios/internet-rural.html" style="color: var(--color-text-secondary); text-decoration: none;">Internet en zonas rurales</a></li>
-                       <li><i class="fas fa-video fa-fw" style="color: var(--color-primary);"></i> <a href="/Servicios/videovigilancia-empresas.html" style="color: var(--color-text-secondary); text-decoration: none;">Videovigilancia</a></li>
+                       <li><i class="fas fa-video fa-fw" style="color: var(--color-primary);"></i> <a href="Servicios/videovigilancia-empresas.html" style="color: var(--color-text-secondary); text-decoration: none;">Videovigilancia</a></li>
                     </ul>
                 </div>
 
@@ -187,9 +195,9 @@
         <div class="container footer-content">
             <p>© <span id="current-year"></span> SATEKOR Telecomunicaciones. Todos los derechos reservados.</p>
             <nav class="footer-nav" aria-label="Navegación secundaria">
-                <a href="/politica-privacidad">Política de Privacidad</a> |
-                <a href="/terminos-uso">Términos de Uso</a> |
-                <a href="/politica-cookies">Política de Cookies</a>
+                <a href="politica-privacidad">Política de Privacidad</a> |
+                <a href="terminos-uso">Términos de Uso</a> |
+                <a href="politica-cookies">Política de Cookies</a>
             </nav>
         </div>
     </footer>
